# space-vision-engine-portfolio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_cpp_engine.ps1
configs/scenarios/: rendezvous_glint_fast_iter.json
cpp_engine/: CMakeLists.txt
cpp_engine/include/engine/: camera.hpp  config.hpp  math.hpp  renderer_gl_fixed.hpp  simulation.hpp  types.hpp  ui.hpp
cpp_engine/include/platform/: win32_window.hpp
cpp_engine/src/: camera.cpp  config.cpp  main.cpp  math.cpp  renderer_gl_fixed.cpp  simulation.cpp  ui.cpp  win32_window.cpp
